--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "python.pythonPath": "/anaconda3/envs/DellH2H/bin/python",
-    "python.formatting.provider": "black"
+    "python.formatting.provider": "autopep8"
 }
